# plaud-connector

./: .env.example  .gitignore  README.md  marketplace.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/plans/: 2026-03-13-plaud-downloader.md
skill/: SKILL.md
skills/plaud-connector/: SKILL.md
src/plaud_downloader/: cli.py  client.py  exporter.py
tests/: test_cli.py  test_client.py  test_exporter.py
