[project]
name = "plaud-downloader"
version = "0.1.0"
description = "Download transcripts and summaries from plaud.ai"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.scripts]
plaud = "plaud_downloader.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
